--- a/en/apps.html
+++ b/en/apps.html
@@ -429,37 +429,37 @@
                 <div class="swiper-wrapper apps__future-slide">
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png" loading="lazy" class="swiper-slide__image" alt="Events"  /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (7).png" loading="lazy" class="swiper-slide__image" alt="Events"  /></div>
                             <p class="swiper-slide__title">Events</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/fm.png" loading="lazy" class="swiper-slide__image" alt="FM channels"  /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (8).png" loading="lazy" class="swiper-slide__image" alt="FM channels"  /></div>
                             <p class="swiper-slide__title">FM Channels</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/voice.png" loading="lazy" class="swiper-slide__image" alt="Voice channel"  /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (9).png" loading="lazy" class="swiper-slide__image" alt="Voice channel"  /></div>
                             <p class="swiper-slide__title">Voice channels</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/book.png"class="swiper-slide__image" loading="lazy" alt="Books"   /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (10).png"class="swiper-slide__image" loading="lazy" alt="Books" /></div>
                             <p class="swiper-slide__title">Books</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/talents.png" loading="lazy" class="swiper-slide__image" alt="Talents" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (11).png" loading="lazy" class="swiper-slide__image" alt="Talents" /></div>
                             <p class="swiper-slide__title">Talents</p>
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/Work & Business.png" class="swiper-slide__image" loading="lazy" alt="Work and Business" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (12).png" class="swiper-slide__image" loading="lazy" alt="Work and Business" /></div>
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
                     </div>
@@ -473,37 +473,37 @@
               <div class="swiper-wrapper apps__future-slide">
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/camedy.png" class="swiper-slide__image" loading="lazy" alt="Comedy Feed"/></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню.png" class="swiper-slide__image" loading="lazy" alt="Comedy Feed"/></div>
                           <p class="swiper-slide__title">Comedy Feed</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/spor-t.png" class="swiper-slide__image" alt="Sport" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (1).png" class="swiper-slide__image" alt="Sport" /></div>
                           <p class="swiper-slide__title">Spor-T</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/stravel.png" loading="lazy" class="swiper-slide__image" alt="Travel"/></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (2).png" loading="lazy" class="swiper-slide__image" alt="Travel"/></div>
                           <p class="swiper-slide__title">sTravel</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/industr.png"class="swiper-slide__image" loading="lazy" alt="ndustry news" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (3).png"class="swiper-slide__image" loading="lazy" alt="ndustry news" /></div>
                           <p class="swiper-slide__title">Industry news</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/artlab.png" loading="lazy" class="swiper-slide__image" alt="Choreography Music Design" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (14).png" loading="lazy" class="swiper-slide__image" alt="Choreography Music Design" /></div>
                           <p class="swiper-slide__title">Art Lab</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" loading="lazy" alt="Calendar"/></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (5).png"class="swiper-slide__image" loading="lazy" alt="Calendar"/></div>
                           <p class="swiper-slide__title">Calendar</p>
                       </div>
                   </div>
