--- a/cs/apps.html
+++ b/cs/apps.html
@@ -443,21 +443,21 @@
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
 
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png" class="swiper-slide__image"loading="lazy" alt="Události"/></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (7).png" class="swiper-slide__image"loading="lazy" alt="Události"/></div>
                             <p class="swiper-slide__title">Události</p>
 
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/fm.png" class="swiper-slide__image"loading="lazy" alt="FM-kanály"/></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (8).png" class="swiper-slide__image"loading="lazy" alt="FM-kanály"/></div>
                             <p class="swiper-slide__title">FM-kanály</p>
 
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/voice.png" class="swiper-slide__image" loading="lazy" alt="Hlasový kanál"  /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (9).png" class="swiper-slide__image" loading="lazy" alt="Hlasový kanál"  /></div>
                             <p class="swiper-slide__title">Hlasové kanály</p>
 
                         </div>
@@ -465,7 +465,7 @@
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
 
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/book.png"class="swiper-slide__image"loading="lazy" alt="Knihy"/></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (10).png"class="swiper-slide__image"loading="lazy" alt="Knihy"/></div>
                             <p class="swiper-slide__title">Knihy</p>
 
                         </div>
@@ -473,14 +473,14 @@
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
 
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/talents.png" class="swiper-slide__image" loading="lazy" alt="Talenty"/></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (11).png" class="swiper-slide__image" loading="lazy" alt="Talenty"/></div>
                             <p class="swiper-slide__title">Talenty</p>
 
                         </div>
                     </div>
                     <div class="swiper-slide">
                         <div class="swiper-slide__wrapper">
-                            <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/Work & Business.png"class="swiper-slide__image"loading="lazy" alt="Práce a podnikání" /></div>
+                            <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (12).png"class="swiper-slide__image"loading="lazy" alt="Práce a podnikání" /></div>
 
                             <p class="swiper-slide__title">Work &amp; Business</p>
                         </div>
@@ -495,39 +495,39 @@
               <div class="swiper-wrapper apps__future-slide">
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/camedy.png" class="swiper-slide__image"loading="lazy" alt="Komediální páska"/></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню.png" class="swiper-slide__image"loading="lazy" alt="Komediální páska"/></div>
                           <p class="swiper-slide__title">Comedy-feed</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/spor-t.png" class="swiper-slide__image"loading="lazy" alt="Sport" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (1).png" class="swiper-slide__image"loading="lazy" alt="Sport" /></div>
                           <p class="swiper-slide__title">Spor-T</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
 
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/stravel.png" class="swiper-slide__image" loading="lazy" alt="Cestování" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (2).png" class="swiper-slide__image" loading="lazy" alt="Cestování" /></div>
 
                           <p class="swiper-slide__title">sTravel</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/industr.png"class="swiper-slide__image"loading="lazy" alt="Novinky z oboru" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (3).png"class="swiper-slide__image"loading="lazy" alt="Novinky z oboru" /></div>
                           <p class="swiper-slide__title">Industry news</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/artlab.png" class="swiper-slide__image" loading="lazy" alt="Art Lab" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (14).png" class="swiper-slide__image" loading="lazy" alt="Art Lab" /></div>
                           <p class="swiper-slide__title">Art Lab</p>
                       </div>
                   </div>
                   <div class="swiper-slide">
                       <div class="swiper-slide__wrapper">
-                          <div class="swiper-slide__image-wrapper"><img src="../assets/img/apps/events.png"class="swiper-slide__image" loading="lazy" alt="Kalendář" /></div>
+                          <div class="swiper-slide__image-wrapper"><img src="../assets/image-lending/generalEng/iOS - меню (9).png"class="swiper-slide__image" loading="lazy" alt="Kalendář" /></div>
                           <p class="swiper-slide__title">Calendar</p>
                       </div>
                   </div>
