--- a/en/team.html
+++ b/en/team.html
@@ -294,7 +294,7 @@
                     </span><span class="item__image ibg"><img src="../assets/img/team/37.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy" /></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person eng-item__person"><img />
 
-                  <p class="item__person-name">Ivan <span class="item__person-role">Web Developer (intern)</span></p>
+                  <p class="item__person-name">Ivan <span class="item__person-role">flutter desktop (intern)</span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/52.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
 
@@ -302,7 +302,7 @@
                 </span><span class="item__image ibg"><img src="../assets/img/team/53.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
 
-                    <p class="item__person-name">Argen<span class="item__person-role">Web Developer (intern) </span></p>
+                    <p class="item__person-name">Argen<span class="item__person-role">flutter desktop (intern) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/49.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
 
@@ -310,7 +310,7 @@
                 </span><span class="item__image ibg"><img src="../assets/img/team/48.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
 
-                    <p class="item__person-name">Farhat<span class="item__person-role">Flutter Developer (intern) </span></p>
+                    <p class="item__person-name">Farkhat<span class="item__person-role">Flutter Developer (intern) </span></p>
                 </span><span class="item__image ibg"><img src="../assets/img/team/51.png" class="team__photo" alt="Фото участника команды SFERA" loading="lazy"/></span></a></div>
                 <div class="team__column"><a class="block-team__item block-team__item_b item" href="#"><span class="logo__item"><img class="logo__image" /><span class="logo__text">Team Member</span></span><span class="item__person"><img />
 
