--- a/cs/index.html
+++ b/cs/index.html
@@ -228,14 +228,20 @@
 						<button class="card-block-top">ASAP</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/01-asap-ios-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="front" src="../assets/en-img/asapios.png" alt="iPhone News Feed"> 
+											<div class="island_poppup"></div>
+										</div>
+									</div>
 							</div>
 							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/01-asap-android-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="back" src="../assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div> 
+								</div> 
 							</div>
 							<div class="left-side"></div>
 						</div>
