--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
 							<div class="product-front">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+											<img class="front" src="assets/en-img/asapios.png" alt="iPhone News Feed"> 
 											<div class="island_poppup"></div>
 										</div>
 									</div>
@@ -237,7 +237,7 @@
 							<div class="product-back">
 									<div class="box-frame">
 										<div class="inner-frame">
-											<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+											<img class="back" src="assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
 										<div class="island_poppup"></div>
 									</div> 
 								</div> 
@@ -252,7 +252,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup"></div>
 									</div>
 								</div>
@@ -260,7 +260,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
 									<div class="island_poppup"></div>
 								</div> 
 							</div> 
@@ -275,7 +275,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/lentaios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup"></div>
 									</div>
 								</div>
@@ -283,7 +283,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/lentaandroid.png" alt="iPhone News Feed"> 
 									<div class="island_poppup"></div>
 								</div> 
 							</div> 
@@ -298,7 +298,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/videosios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup"></div>
 									</div>
 								</div>
@@ -306,7 +306,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/videosandroid.png" alt="iPhone News Feed"> 
 									<div class="island_poppup"></div>
 								</div> 
 							</div> 
@@ -321,7 +321,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/blacboxios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup"></div>
 									</div>
 								</div>
@@ -329,7 +329,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/blacboxandroid.png" alt="iPhone News Feed"> 
 									<div class="island_poppup"></div>
 								</div> 
 							</div> 
@@ -344,7 +344,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/findfriendios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup"></div>
 									</div>
 								</div>
@@ -352,7 +352,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/findfriendandroid.png" alt="iPhone News Feed"> 
 									<div class="island_poppup"></div>
 								</div> 
 							</div> 
@@ -367,7 +367,7 @@
 						<div class="product-front eng-product-front">
 										<div class="box-frame">
 											<div class="inner-frame">
-												<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+												<img class="front" src="assets/en-img/meetnetios.png" alt="iPhone News Feed"> 
 												<div class="island_poppup"></div>
 											</div>
 										</div>
@@ -375,7 +375,7 @@
 								<div class="product-back">
 										<div class="box-frame">
 											<div class="inner-frame">
-												<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+												<img class="back" src="assets/en-img/meetnetandroid.png" alt="iPhone News Feed"> 
 											<div class="island_poppup"></div>
 										</div> 
 									</div> 
@@ -390,7 +390,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/JL.png" alt="iPhone News Feed"> 
 										<div class="island_poppup"></div>
 									</div>
 								</div>
@@ -398,7 +398,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/JL2.png" alt="iPhone News Feed"> 
 									<div class="island_poppup"></div>
 								</div> 
 							</div> 
@@ -413,7 +413,7 @@
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="front" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="front" src="assets/en-img/Chooseios.png" alt="iPhone News Feed"> 
 										<div class="island_poppup"></div>
 									</div>
 								</div>
@@ -421,7 +421,7 @@
 						<div class="product-back">
 								<div class="box-frame">
 									<div class="inner-frame">
-										<img class="back" src="assets/animat/iOS - меню (1).png" alt="iPhone News Feed"> 
+										<img class="back" src="assets/en-img/Chooseandroid.png" alt="iPhone News Feed"> 
 									<div class="island_poppup"></div>
 								</div> 
 							</div> 
