--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 									<div class="box-frame">
 										<div class="inner-frame">
 											<img class="front" src="assets/en-img/asapios.png" alt="iPhone News Feed"> 
-											<div class="island_poppup"></div>
+											<div class="island_poppup-IOS Mac1"></div>
 										</div>
 									</div>
 							</div>
@@ -238,7 +238,7 @@
 									<div class="box-frame">
 										<div class="inner-frame">
 											<img class="back" src="assets/en-img/asaspandroid.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-Android And1"></div>
 									</div> 
 								</div> 
 							</div>
@@ -253,7 +253,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac2"></div>
 									</div>
 								</div>
 						</div>
@@ -261,7 +261,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And2"></div>
 								</div> 
 							</div> 
 						</div>
@@ -276,7 +276,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="assets/en-img/lentaios.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac3"></div>
 									</div>
 								</div>
 						</div>
@@ -284,7 +284,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="assets/en-img/lentaandroid.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And3"></div>
 								</div> 
 							</div> 
 						</div>
@@ -299,7 +299,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="assets/en-img/videosios.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac4"></div>
 									</div>
 								</div>
 						</div>
@@ -307,7 +307,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="assets/en-img/videosandroid.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And4"></div>
 								</div> 
 							</div> 
 						</div>
@@ -322,7 +322,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="assets/en-img/blacboxios.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac5"></div>
 									</div>
 								</div>
 						</div>
@@ -330,7 +330,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="assets/en-img/blacboxandroid.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And5"></div>
 								</div> 
 							</div> 
 						</div>
@@ -345,7 +345,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="assets/en-img/findfriendios.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac6"></div>
 									</div>
 								</div>
 						</div>
@@ -353,7 +353,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="assets/en-img/findfriendandroid.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And6"></div>
 								</div> 
 							</div> 
 						</div>
@@ -368,7 +368,7 @@
 										<div class="box-frame">
 											<div class="inner-frame">
 												<img class="front" src="assets/en-img/meetnetios.png" alt="iPhone News Feed"> 
-												<div class="island_poppup"></div>
+												<div class="island_poppup-IOS Mac7"></div>
 											</div>
 										</div>
 								</div>
@@ -376,7 +376,7 @@
 										<div class="box-frame">
 											<div class="inner-frame">
 												<img class="back" src="assets/en-img/meetnetandroid.png" alt="iPhone News Feed"> 
-											<div class="island_poppup"></div>
+											<div class="island_poppup-Android And7"></div>
 										</div> 
 									</div> 
 								</div>
@@ -391,7 +391,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="assets/en-img/JL.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac8"></div>
 									</div>
 								</div>
 						</div>
@@ -399,7 +399,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="assets/en-img/JL2.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And8"></div>
 								</div> 
 							</div> 
 						</div>
@@ -414,7 +414,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="assets/en-img/Chooseios.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac9"></div>
 									</div>
 								</div>
 						</div>
@@ -422,7 +422,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="assets/en-img/Chooseandroid.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And9"></div>
 								</div> 
 							</div> 
 						</div>
