--- a/cs/index.html
+++ b/cs/index.html
@@ -251,14 +251,20 @@
 						<button class="card-block-top">Profil</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/02-profile-ios-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="front" src="../assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
+											<div class="island_poppup"></div>
+										</div>
+									</div>
 							</div>
 							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/02-profile-android-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="back" src="../assets/en-img/profile_ios.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div> 
+								</div> 
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -268,14 +274,20 @@
 						<button class="card-block-top">NewsFeed</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/03-lenta-ios-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="front" src="../assets/en-img/lentaios.png" alt="iPhone News Feed"> 
+											<div class="island_poppup"></div>
+										</div>
+									</div>
 							</div>
 							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/03-lenta-android-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="back" src="../assets/en-img/lentaandroid.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div> 
+								</div> 
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -285,14 +297,20 @@
 						<button class="card-block-top">VideoS</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/04-videos-ios-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="front" src="../assets/en-img/videosios.png" alt="iPhone News Feed"> 
+											<div class="island_poppup"></div>
+										</div>
+									</div>
 							</div>
 							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/04-videos-android-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="back" src="../assets/en-img/videosandroid.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div> 
+								</div> 
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -302,14 +320,20 @@
 						<button class="card-block-top">BlackBox</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/05-black-box-ios-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="front" src="../assets/en-img/blacboxios.png" alt="iPhone News Feed"> 
+											<div class="island_poppup"></div>
+										</div>
+									</div>
 							</div>
 							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/05-black-box-android-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="back" src="../assets/en-img/blacboxandroid.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div> 
+								</div> 
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -319,14 +343,20 @@
 						<button class="card-block-top">FindFriends</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/06-FF-ios-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="front" src="../assets/en-img/findfriendios.png" alt="iPhone News Feed"> 
+											<div class="island_poppup"></div>
+										</div>
+									</div>
 							</div>
 							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/06-FF-android-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="back" src="../assets/en-img/findfriendandroid.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div> 
+								</div> 
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -334,33 +364,45 @@
 					</div>
 					<div class="card-block">
 						<button class="card-block-top">MeetNet</button>
-						<div class="product-inner">
-							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/07-Meet-Net-ios-eng.webm" type='video/webm'>
-								</video>
-							</div>
-							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/07-Meet-Net-android-eng.webm" type='video/webm'>
-								</video>
-							</div>
-							<div class="left-side"></div>
-						</div>
+						<div class="product-inner eng-product-inner">
+							<div class="product-front eng-product-front">
+											<div class="box-frame">
+												<div class="inner-frame">
+													<img class="front" src="../assets/en-img/meetnetios.png" alt="iPhone News Feed"> 
+													<div class="island_poppup"></div>
+												</div>
+											</div>
+									</div>
+									<div class="product-back">
+											<div class="box-frame">
+												<div class="inner-frame">
+													<img class="back" src="../assets/en-img/meetnetandroid.png" alt="iPhone News Feed"> 
+												<div class="island_poppup"></div>
+											</div> 
+										</div> 
+									</div>
+									<div class="left-side"></div>
+								</div>
 						<p class="card-block-botton">Podaplikace pro seznamování a hledání druhé polovinky</p>
 					</div>
 					<div class="card-block">
 						<button class="card-block-top">JobLite</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/08-Job-Lite-ios-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="front" src="../assets/en-img/JL.png" alt="iPhone News Feed"> 
+											<div class="island_poppup"></div>
+										</div>
+									</div>
 							</div>
 							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/08-Job-Lite-android-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="back" src="../assets/en-img/JL2.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div> 
+								</div> 
 							</div>
 							<div class="left-side"></div>
 						</div>
@@ -370,14 +412,20 @@
 						<button class="card-block-top">Choose</button>
 						<div class="product-inner">
 							<div class="product-front">
-								<video class="front" autoplay muted loop>
-									<source src="../assets/animation en/ios/09-Choose-ios-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="front" src="../assets/en-img/Chooseios.png" alt="iPhone News Feed"> 
+											<div class="island_poppup"></div>
+										</div>
+									</div>
 							</div>
 							<div class="product-back">
-								<video class="back" autoplay muted loop>
-									<source src="../assets/animation en/android/09-Choose-android-eng.webm" type='video/webm'>
-								</video>
+									<div class="box-frame">
+										<div class="inner-frame">
+											<img class="back" src="../assets/en-img/Chooseandroid.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div> 
+								</div> 
 							</div>
 							<div class="left-side"></div>
 						</div>
