--- a/ru/index.html
+++ b/ru/index.html
@@ -231,16 +231,20 @@
 					<button class="card-block-top">ASAP</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/01-asap-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="front" loading="lazy"src="../assets/image-lending/1920/01-asap-ios-rus.gif" alt="ASAP айфон"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="../assets/card rus/iOS 1.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
 						</div>
 						<div class="product-back">
-							<video class="back" autoplay muted loop>
-								<source src="../assets/image-lending/1920/01_asap_android_rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="back" loading="lazy"src="../assets/image-lending/1920/01-asap-android-rus.gif" alt="ASAP андроид"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back"  src="../assets/card rus/iOS 1.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -250,16 +254,20 @@
 					<button class="card-block-top">Профиль</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/02-profile-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="front" loading="lazy" src="../assets/image-lending/1920/02-profile-ios-rus.gif" alt="Профиль айфон"> -->
-							</div>
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="../assets/card rus/ios2.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
+						</div>
 						<div class="product-back">
-							<video class="back" autoplay muted loop>
-								<source src="../assets/image-lending/1920/02_profile_android_rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="back" loading="lazy" src="../assets/image-lending/1920/02-profile-android-rus.gif" alt="Профиль андроид"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back" src="../assets/card rus/ios2.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -269,16 +277,20 @@
 					<button class="card-block-top">Лента</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/03-lenta-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="front" loading="lazy" src="../assets/image-lending/1920/03-lenta-ios-rus.gif" alt="Лента новостей айфон"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="../assets/card rus/ios3.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
 						</div>
 						<div class="product-back">
-							<video class="back" autoplay muted loop>
-								<source src="../assets/image-lending/1920/03_lenta_android_rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="back" loading="lazy" src="../assets/image-lending/1920/03-lenta-android-rus.gif" alt="Лента новостей андроид"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back" src="../assets/card rus/ios3.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -288,16 +300,20 @@
 					<button class="card-block-top">VideoS</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/04-videos-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img  class="front" loading="lazy" src="../assets/image-lending/1920/04-videos-ios-rus.gif" alt="Видео на айфоне"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="../assets/card rus/ios4.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
 						</div>
 						<div class="product-back">
-							<video class="back" autoplay muted loop>
-								<source src="../assets/image-lending/1920/04_videos_android_rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="back" loading="lazy" src="../assets/image-lending/1920/04-videos-android-rus.gif" alt="Видео на андроиде"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back" src="../assets/card rus/ios4.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -307,16 +323,20 @@
 					<button class="card-block-top">BlackBox</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/05-black-box-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="front" loading="lazy" src="../assets/image-lending/1920/05-black-box-ios-rus.gif" alt="Blackbox айфон"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="../assets/card rus/ios5.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
 						</div>
 						<div class="product-back">
-							<video class="back" autoplay muted loop>
-								<source src="../assets/image-lending/1920/05_black_box_android_rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="back" loading="lazy" src="../assets/image-lending/1920/05-black-box-android-rus.gif" alt="Blackbox андроид"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back" src="../assets/card rus/ios5.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -326,16 +346,20 @@
 					<button class="card-block-top">FindFriends</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/06-FF-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="front" loading="lazy" src="../assets/image-lending/1920/06-FF-ios-rus.gif" alt="Поиск друзей"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="../assets/card rus/ios6.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
 						</div>
 						<div class="product-back">
-							<video class="back" autoplay muted loop>
-								<source src="../assets/image-lending/1920/06_FF_android_rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="back" loading="lazy" src="../assets/image-lending/1920/06-FF-android-rus.gif" alt="Поиск друзей"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back" src="../assets/card rus/ios6.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -345,16 +369,20 @@
 					<button class="card-block-top">MeetNet</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/07-Meet-Net-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="front"loading="lazy" src="../assets/image-lending/1920/07-meet-net-ios-rus.gif" alt="Найти  вторую половинку"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="../assets/card rus/ios7.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
 						</div>
 						<div class="product-back">
-							<video class="back" autoplay muted loop>
-								<source src="../assets/image-lending/1920/07_Meet_Net_android_rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="back" loading="lazy" src="../assets/image-lending/1920/07-Meet-Net-android-rus.gif" alt="Найти  вторую половинку"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back" src="../assets/card rus/ios7.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -362,20 +390,22 @@
 				</div>
 				<div class="card-block">
 					<button class="card-block-top">JobLite</button>
-					<div class="product-inner">
+					<<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/08-Job-Lite-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="front" loading="lazy" src="../assets/image-lending/1920/08-job-lite-ios-rus.gif" alt="Поиск работы "> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="../assets/card rus/ios8.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
 						</div>
 						<div class="product-back">
-							<div>
-								<video class="back" autoplay muted loop>
-									<source src="../assets/image-lending/1920/08_job_lite_android_rus.webm" type='video/webm'>
-								</video>
-								<!-- <img class="back" loading="lazy" src="../assets/image-lending/1920/08-job-lite-android-rus.gif" alt="Поиск работы "> -->
-							</div>
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back" src="../assets/card rus/ios8.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
@@ -385,16 +415,20 @@
 					<button class="card-block-top">Choose</button>
 					<div class="product-inner">
 						<div class="product-front">
-							<video class="front" autoplay muted loop>
-								<source src="../assets/image-lending/1920/09-Choose-ios-rus.webm" type='video/webm'>
-							</video>
-								<!-- <img class="front"loading="lazy" src="../assets/image-lending/1920/09-choose-ios-rus.gif" alt="Красифые картинки айфон"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="front" src="/assets/card rus/ios9.png" alt="iPhone News Feed"> 
+										<div class="island_poppup"></div>
+									</div>
+								</div>
 						</div>
 						<div class="product-back">
-							<video class="back" autoplay muted loop>
-								<source src="../assets/image-lending/1920/09_choose_android_us.webm" type='video/webm'>
-							</video>
-								<!-- <img class="back"loading="lazy"src="../assets/image-lending/1920/09-choose-android-rus.gif" alt="Красифые картинки андроид"> -->
+								<div class="box-frame">
+									<div class="inner-frame">
+										<img class="back" src="/assets/card rus/ios9.png" alt="iPhone News Feed"> 
+									<div class="island_poppup"></div>
+								</div> 
+							</div> 
 						</div>
 						<div class="left-side"></div>
 					</div>
