--- a/ru/index.html
+++ b/ru/index.html
@@ -186,14 +186,8 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<video class="section-two-image-one" autoplay muted loop>
-						<source src="../assets/image-lending/1920/01-asap-ios-rus.webm" type='video/webm'>
-					</video>
-					<video class="section-two-image-two" autoplay muted loop>
-						<source src="../assets/image-lending/1920/01_asap_android_rus.webm" type='video/webm'>
-					</video>
-					<!-- <span ><img class="section-two-image-one" loading="lazy" src="../assets/image-lending/1920/01-asap-ios-rus.gif" alt="Андроид меню"></span>
-					<span><img class="section-two-image-two" loading="lazy"src="../assets/image-lending/1920/01-asap-android-rus.gif"alt="Айфон меню"></span> -->
+					<span ><img class="section-two-image-one" loading="lazy" src="../assets/card rus/01-asap-ios-rus.gif" alt="Андроид меню"></span>
+					<span><img class="section-two-image-two" loading="lazy"src="../assets/card rus/01-asap-android-rus.gif"alt="Айфон меню"></span>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">МЕССЕНДЖЕР</span>
