--- a/cs/index.html
+++ b/cs/index.html
@@ -182,14 +182,9 @@
 			</section>
 			<section class="section-two">
 				<div class="section-two-image">
-					<video class="section-two-image-one" autoplay muted loop>
-						<source src="../assets/animation en/ios/01-asap-ios-eng.webm" type='video/webm'>
-					</video>
-					<video class="section-two-image-two" autoplay muted loop>
-						<source src="../assets/animation en/android/01-asap-android-eng.webm" type='video/webm'>
-					</video>
-					<!-- <span ><img class="section-two-image-one"loading="lazy"src="../assets/animation en/IOS/01-asap-ios-eng.gif" alt="Android menu"></span>
-					<span><img class="section-two-image-two" loading="lazy"src="../assets/animation en/ANDROID/01-asap-android-eng.gif" alt="IPhone menu"></span> -->
+					
+					<span ><img class="section-two-image-one"loading="lazy"src="../assets/image-lending/generalEng/01-asap-ios-eng.gif" alt="Android menu"></span>
+					<span><img class="section-two-image-two" loading="lazy"src="../assets/image-lending/generalEng/01-asap-android-eng.gif" alt="IPhone menu"></span>
 				</div>
 				<div class="section-two-content">
 					<span class="section-two-content-message">Messenger</span>
