--- a/ru/index.html
+++ b/ru/index.html
@@ -234,7 +234,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="../assets/card rus/iOS 1.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac1"></div>
 									</div>
 								</div>
 						</div>
@@ -242,7 +242,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back"  src="../assets/card rus/iOS 1.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And1"></div>
 								</div> 
 							</div> 
 						</div>
@@ -257,7 +257,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="../assets/card rus/ios2.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac2"></div>
 									</div>
 								</div>
 						</div>
@@ -265,7 +265,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="../assets/card rus/ios2.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And2"></div>
 								</div> 
 							</div> 
 						</div>
@@ -280,7 +280,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="../assets/card rus/ios3.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac3"></div>
 									</div>
 								</div>
 						</div>
@@ -288,7 +288,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="../assets/card rus/ios3.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And3"></div>
 								</div> 
 							</div> 
 						</div>
@@ -303,7 +303,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="../assets/card rus/ios4.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac4"></div>
 									</div>
 								</div>
 						</div>
@@ -311,7 +311,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="../assets/card rus/ios4.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And4"></div>
 								</div> 
 							</div> 
 						</div>
@@ -326,7 +326,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="../assets/card rus/ios5.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac5"></div>
 									</div>
 								</div>
 						</div>
@@ -334,7 +334,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="../assets/card rus/ios5.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And5"></div>
 								</div> 
 							</div> 
 						</div>
@@ -349,7 +349,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="../assets/card rus/ios6.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac6"></div>
 									</div>
 								</div>
 						</div>
@@ -357,7 +357,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="../assets/card rus/ios6.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And6"></div>
 								</div> 
 							</div> 
 						</div>
@@ -372,7 +372,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="../assets/card rus/ios7.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac7"></div>
 									</div>
 								</div>
 						</div>
@@ -380,7 +380,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="../assets/card rus/ios7.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And7"></div>
 								</div> 
 							</div> 
 						</div>
@@ -390,12 +390,12 @@
 				</div>
 				<div class="card-block">
 					<button class="card-block-top">JobLite</button>
-					<<div class="product-inner">
+					<div class="product-inner">
 						<div class="product-front">
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="../assets/card rus/ios8.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac8"></div>
 									</div>
 								</div>
 						</div>
@@ -403,7 +403,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="../assets/card rus/ios8.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And8"></div>
 								</div> 
 							</div> 
 						</div>
@@ -418,7 +418,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="front" src="/assets/card rus/ios9.png" alt="iPhone News Feed"> 
-										<div class="island_poppup"></div>
+										<div class="island_poppup-IOS Mac9"></div>
 									</div>
 								</div>
 						</div>
@@ -426,7 +426,7 @@
 								<div class="box-frame">
 									<div class="inner-frame">
 										<img class="back" src="/assets/card rus/ios9.png" alt="iPhone News Feed"> 
-									<div class="island_poppup"></div>
+									<div class="island_poppup-Android And9"></div>
 								</div> 
 							</div> 
 						</div>
